<resources>
    <string name="app_name">MyMiniSlot</string>
    <string name="btn_reset">手持ちRESET</string>
    <string name="btn_up">　掛け金UP　</string>
    <string name="btn_down">掛け金DOWN</string>
    <string name="txt_my">手持ちコイン</string>
    <string name="txt_my_coin">0</string>
    <string name="txt_bed">掛け金</string>
    <string name="txt_bed_coin">10</string>
    <string name="btn_start">START!!!!</string>
    <string name="txt_back">もどる</string>
    <string name="txt_result">結果</string>
    <string name="txt_stop">STOP</string>
    <string name="btn_start2">スタート！</string>
</resources>
